# me-when

./: .gitignore  Cargo.toml  README.md  bun.lockb  client.ts  commands.ts  config.ts  go.mod  index.ts  package.json  tsconfig.json
.github/workflows/: main.yml  rust.yml
commands/: ping.ts  prepare.ts  scrapetest.ts
lib/: analysis.test.ts  analysis.ts
playback/: queue.ts  queue_support.ts  queue_worker.ts
src/: bot.rs  config.rs  main.rs
src/commands/: mod.rs
stuff/: threads.ts
