[package]
name = "me-when"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
poise = "0.5.6"
serde = { version = "1.0.188", features = ["derive"] }
# serenity = "0.11.6"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.2"
